Avancement de la présentation de 3 à 8

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,29 @@
       <h2>Mise en application notions de base</h2>
     </div>
     <div class="exos">
-      <div class="card-exo">
+      <div class="card-exo exo1">
         <app-exercice1></app-exercice1>
       </div>
-      <div class="card-exo">
+      <div class="card-exo exo2">
         <app-exercice2></app-exercice2>
       </div>
-      <div class="card-exo">
+      <div class="card-exo exo3">
         <app-exercice3></app-exercice3>
       </div>
-      <div class="card-exo">
+      <div class="card-exo exo4">
         <app-exercice4></app-exercice4>
+      </div>
+      <div class="card-exo exo5">
+        <app-exercice5></app-exercice5>
+      </div>
+      <div class="card-exo exo6">
+        <app-exercice6></app-exercice6>
+      </div>
+      <div class="card-exo exo7">
+        <app-exercice7></app-exercice7>
+      </div>
+      <div class="card-exo exo8">
+        <app-exercice8></app-exercice8>
       </div>
     </div>
     </div>
