--- a/src/app/exercice3/exercice3.component.html
+++ b/src/app/exercice3/exercice3.component.html
@@ -1,6 +1,6 @@
 <div class="exo">
-    <h3>Utilisation d'une directive If</h3>
-    <p *ngIf="statut">Exo 3</p>
-    <p *ngIf="!statut">3eme exo</p>
+    <h3>Utilisation d'une directive *If</h3>
+    <p *ngIf="statut">Valide</p>
+    <p *ngIf="!statut">Non valide</p>
     <button (click)="inverseStatut()">status : {{statut}}</button>
 </div>
