--- a/src/app/exercice4/exercice4.component.html
+++ b/src/app/exercice4/exercice4.component.html
@@ -1,5 +1,5 @@
 <div class="exo">
-    <h3>Exo 4 : utilisation de la directive For</h3>
+    <h3>Utilisation d'une directive *For</h3>
     <ul>
         <li *ngFor="let item of texts">{{item}}</li>
     </ul>
